--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <title>Streamlit Component</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-7" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Streamlit Component" />
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
@@ -14,7 +15,7 @@
   <body>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col pianoroll-border">
         <midi-visualizer type="piano-roll" id="my-visualizer"></midi-visualizer>
       </div>
     </div>
@@ -27,12 +28,6 @@
         >
         </midi-player>
         <svg id="mySvg" width="100" height="100"></svg>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <button id="my-button">HELLO</button>
       </div>
     </div>
   </div>
