Start drawing custom Piano Rolls

--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -27,7 +27,10 @@
           sound-font
         >
         </midi-player>
-        <svg id="mySvg" width="100" height="100"></svg>
+
+        <div class="col pianoroll-border">
+          <svg id="my-svg" width="100%" height="200"></svg>
+        </div>
       </div>
     </div>
   </div>
