--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -21,16 +21,18 @@
     </div>
 
     <div class="row">
+      <div class="col pianoroll-border">
+        <svg id="my-svg" width="100%" height="200"></svg>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col">
         <midi-player
           id="my-midi-player"
           sound-font
         >
         </midi-player>
-
-        <div class="col pianoroll-border">
-          <svg id="my-svg" width="100%" height="200"></svg>
-        </div>
       </div>
     </div>
   </div>
