--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -15,8 +15,12 @@
   <body>
   <div class="container">
     <div class="row">
-      <div class="col pianoroll-border">
+      <div class="col pianoroll-border pianoroll-background">
         <svg id="my-svg" width="100%" height="200"></svg>
+
+        <a href="https://pianoroll.io" target="_blank", class="pianoroll-link">
+          <img src="color.svg" alt="Description of SVG image" width="20" height="20"/>
+        </a>
       </div>
     </div>
 
@@ -27,6 +31,8 @@
           sound-font
         >
         </midi-player>
+      </div>
+      <div class="col">
       </div>
     </div>
   </div>
