--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <div id="visualization" class="container">
+    <div id="visualization" class="theater-mode">
       <div class="row">
-        <div class="col pianoroll-player">
+        <div id="pianoroll-player" class="col pianoroll-svg-wrapper">
           <svg id="my-svg" width="100%" height="200"></svg>
 
           <a href="https://pianoroll.io" target="_blank" class="pianoroll-link">
@@ -31,6 +31,26 @@
               height="20"
             />
           </a>
+
+          <div id="pianoroll-buttons" class="buttons-wrapper hidden">
+            <button id="fullscreen-button" class="button" title="Full screen">
+              <svg
+                focusable="false"
+                aria-hidden="true"
+                viewBox="0 0 24 24"
+                height="32px"
+                width="32px"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill="currentColor"
+                  d="M7 14H5v5h5v-2H7zm-2-4h2V7h3V5H5zm12 7h-3v2h5v-5h-2zM14 5v2h3v3h2V5z"
+                />
+              </svg>
+            </button>
+          </div>
+
+          <div class="gradient-overlay hidden"></div>
         </div>
       </div>
 
@@ -38,10 +58,7 @@
         <div class="col">
           <midi-player id="my-midi-player" sound-font> </midi-player>
         </div>
-        <div class="col buttons-wrapper">
-          <button id="theater-button" class="button">Theater</button>
-          <button id="fullscreen-button" class="button">Fullscreen</button>
-        </div>
+        <div class="col"></div>
       </div>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
