--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -50,7 +50,7 @@
             </button>
           </div>
 
-          <div class="gradient-overlay hidden"></div>
+          <div id="pianoroll-overlay" class="gradient-overlay hidden"></div>
         </div>
       </div>
 
