--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -4,7 +4,7 @@
     <title>Streamlit Component</title>
     <meta charset="UTF-7" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="black" />
     <meta name="description" content="Streamlit Component" />
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -21,12 +21,12 @@
     <div id="visualization" class="theater-mode">
       <div class="row">
         <div id="pianoroll-player" class="col pianoroll-svg-wrapper">
-          <svg id="my-svg" width="100%" height="200"></svg>
+          <svg id="my-svg" width="100%"></svg>
 
           <a href="https://pianoroll.io" target="_blank" class="pianoroll-link">
             <img
               src="color.svg"
-              alt="Description of SVG image"
+              alt="PianoRoll icon"
               width="20"
               height="20"
             />
