use css to control pianoroll aspect ratio

--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -21,7 +21,7 @@
     <div id="visualization" class="theater-mode">
       <div class="row">
         <div id="pianoroll-player" class="col pianoroll-svg-wrapper">
-          <svg id="my-svg" width="100%"></svg>
+          <svg id="my-svg" class="pianoroll-svg" width="100%"></svg>
 
           <a href="https://pianoroll.io" target="_blank" class="pianoroll-link">
             <img
