--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -91,7 +91,25 @@
         <div id="pianoroll-overlay" class="gradient-overlay hidden"></div>
       </div>
       <div class="pianoroll-progress-bar-wrapper">
-        <svg class="pianoroll-progress-bar"></svg>
+        <svg
+          id="progress-bar"
+          class="pianoroll-progress-bar"
+          width="100%"
+          viewBox="0 0 1 1"
+          preserveAspectRatio="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <line
+            id="progress-line"
+            class="pianoroll-progress-line"
+            x1="0"
+            y1="0"
+            x2="0"
+            y2="1"
+            stroke="#E8A03E"
+            stroke-width="0.002"
+          />
+        </svg>
       </div>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
