Added optional progress timeline

--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -116,7 +116,7 @@
 
         <div id="pianoroll-overlay" class="gradient-overlay hidden"></div>
       </div>
-      <div class="pianoroll-progress-bar-wrapper">
+      <!-- <div class="pianoroll-progress-bar-wrapper">
         <svg
           id="progress-bar"
           class="pianoroll-progress-bar"
@@ -125,7 +125,7 @@
           preserveAspectRatio="none"
           xmlns="http://www.w3.org/2000/svg"
         ></svg>
-      </div>
+      </div> -->
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
