--- a/streamlit_pianoroll/frontend/public/index.html
+++ b/streamlit_pianoroll/frontend/public/index.html
@@ -26,7 +26,7 @@
           <img src="color.svg" alt="PianoRoll icon" width="20" height="20" />
         </a>
 
-        <button id="play-button" class="button play-button-overlay">
+        <button id="play-button" class="button play-button-overlay hidden">
           <svg
             width="64"
             height="64"
